# webauthn_sample

./: README.md  compose.yml
.claude/: settings.local.json
backend/: Cargo.toml  Dockerfile
backend/src/: db.rs  handlers.rs  main.rs  models.rs
db/: init.sql
docs/: plans.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: index.ts  styles.css  types.ts  ui.ts  webauthn.ts
