[package]
name = "webauthn-sample"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
base64 = "0.21"
url = "2.4"
env_logger = "0.10"
lazy_static = "1.4"